--- a/.gitignore
+++ b/.gitignore
@@ -167,6 +167,7 @@ icons
 /nuget-packages/All
 /src/scripts/assembly/*.pdb
 /src/scripts/assembly/*.dll
+/src/SlideMeister/assets/images/*.png
 
 project.lock.json
 *.js.map
