Toolbar item included

--- a/src/SlideMeister/SlideMeister.csproj
+++ b/src/SlideMeister/SlideMeister.csproj
@@ -275,5 +275,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\images\clipboard_copy.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
